# ha-apps

./: .gitignore  .yamllint  CONTRIBUTING.md  README.md  SECURITY.md  WISHLIST.md  repository.yaml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
bazarr/: CHANGELOG.md  Dockerfile  README.md  build.yaml  config.yaml
bookmark-curator-scaffold/: .gitignore  HANDOFF.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
bookmark-curator-scaffold/src-tauri/: Cargo.toml  tauri.conf.json
bookmark-curator-scaffold/src-tauri/capabilities/: default.json
bookmark-curator-scaffold/src-tauri/icons/: icon.icns
bookmark-curator-scaffold/src-tauri/src/: categorize.rs  commands.rs  config.rs  error.rs  export.rs  history.rs  lib.rs  main.rs  state.rs
bookmark-curator-scaffold/src-tauri/src/ai/: claude.rs  mod.rs  ollama.rs
lidarr/: CHANGELOG.md  Dockerfile  README.md  build.yaml  config.yaml
overseerr/: CHANGELOG.md  Dockerfile  README.md  build.yaml  config.yaml
prowlarr/: CHANGELOG.md  Dockerfile  README.md  build.yaml  config.yaml
qbittorrent/: CHANGELOG.md  Dockerfile  README.md  build.yaml  config.yaml
radarr/: CHANGELOG.md  Dockerfile  README.md  build.yaml  config.yaml
sabnzbd/: CHANGELOG.md  Dockerfile  README.md  build.yaml  config.yaml
seerr/: CHANGELOG.md  Dockerfile  README.md  build.yaml  config.yaml
sonarr/: CHANGELOG.md  Dockerfile  README.md  build.yaml  config.yaml
tautulli/: CHANGELOG.md  Dockerfile  README.md  build.yaml  config.yaml
(+33 files in other folders)
